--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -32,6 +32,26 @@
       <label for="date" class="col-sm-2">Venue</label>
       <div class="col-sm-10"><%= f.text_field :venue, class: "form-control" %></div>
     </div>
+
+    <div class="form-group">
+      <label for="date" class="col-sm-2">Prayer Start:</label>
+      <div class="col-sm-10"><%= f.text_field :prayer_count_1, class: "form-control" %></div>
+    </div>
+
+    <div class="form-group">
+      <label for="date" class="col-sm-2">Prayer End:</label>
+      <div class="col-sm-10"><%= f.text_field :prayer_count_2, class: "form-control" %></div>
+    </div>
+
+    <div class="form-group">
+      <label for="date" class="col-sm-2">Service Start:</label>
+      <div class="col-sm-10"><%= f.text_field :head_count_1, class: "form-control" %></div>
+    </div>
+
+    <div class="form-group">
+      <label for="date" class="col-sm-2">Service End:</label>
+      <div class="col-sm-10"><%= f.text_field :head_count_2, class: "form-control" %></div>
+    </div>
   </div>
 
   <div class="actions">
